# android-labs-graph

./: .gitignore  CMakeLists.txt  README.md
src/android/: AndroidManifest.xml
src/android/src/nubip/edu/ua/labs/app/: LabsActivity.java
src/android/src/nubip/edu/ua/labs/graph/: LabsActivity.java
src/app/: CMakeLists.txt
src/app/config/: qtquickcontrols2.conf
src/app/config/+windows/: qtquickcontrols2.conf
src/app/imports/: MainWindow.qml
src/app/imports/page/: FunctionPage.qml  ProfilePage.qml
src/app/qml/: MainWindow.qml
src/app/qml/graph/: LinesGraph.qml  Scatter3DGraph.qml  ScatterGraph.qml  Surface3DGraph.qml
src/app/qml/page/: FunctionPage.qml  GraphPage.qml  ProfilePage.qml  SettingsPage.qml
src/app/src/: main.cpp
src/core/: CMakeLists.txt
src/core/include/: JsonObjectInterface.hpp  MathFunction.hpp  MathGraph.hpp  MathInput.hpp  MathPoint.hpp  MathRange.hpp  MathResult.hpp  SaveManger.hpp
src/core/src/: MathFunction.cpp  MathGraph.cpp  MathInput.cpp  MathPoint.cpp  MathRange.cpp  MathResult.cpp  SaveManager.cpp
src/qml/: CMakeLists.txt
src/qml/import/: MainWindow.qml
